# Dispatcharr

./: CHANGELOG.md  CONTRIBUTING.md  Plugin_repo.md  Plugins.md  manage.py  pyproject.toml  version.py
.github/workflows/: fork-hls-test-image.yml  hls-llhls-image.yml  hls-test-image.yml
apps/accounts/: authentication.py
apps/channels/: api_urls.py  api_views.py  compact_numbering.py  models.py  serializers.py  signals.py  utils.py
apps/channels/migrations/: 0038_add_catchup_fields.py
apps/channels/tests/: test_catchup_utils.py  test_channel_api.py  test_recording_playback_auth.py  (+3 more)
apps/connect/: utils.py
apps/epg/: api_views.py  models.py  tasks.py
apps/m3u/: api_urls.py  api_views.py  forms.py  models.py  serializers.py  tasks.py  utils.py
apps/output/: epg.py  streaming_chunk_cache.py  test_streaming_chunk_cache.py  tests.py  views.py
apps/plugins/: api_views.py  loader.py
apps/proxy/: config.py  urls.py  utils.py
apps/timeshift/: apps.py  helpers.py  views.py
apps/vod/: models.py  tasks.py
core/: api_views.py  models.py  serializers.py  tasks.py  tests.py  utils.py  xtream_codes.py
core/migrations/: 0026_add_channel_client_wait_period.py
dispatcharr/: celery.py  settings.py  settings_test.py  urls.py
dispatcharr/db/: process_label.py
docker/: uwsgi.debug.ini
docs/: hls-output.md
frontend/: package-lock.json  package.json
frontend/src/: WebSocket.jsx  constants.js
tests/: test_custom_properties_as_dict.py  test_geventpool_conn_lifetime.py  test_log_system_event.py  test_process_label.py  test_user_preferences.py
(+122 files in other folders)
